# Ishaan_Verma

./: Convolutonal_neural_network-checkpoint.ipynb  Decision_trees-checkpoint.ipynb  HSV_train-checkpoint.ipynb  Kmeans-checkpoint.ipynb  Linear regression-checkpoint.ipynb  Logistic regression-checkpoint.ipynb  README.md  YUV_train-checkpoint.ipynb  chat_listener.cpp  chat_talker.cpp  neural_network-checkpoint.ipynb  opencv-checkpoint.ipynb  package.xml
ROS tasks/chatroom/: CMakeLists.txt
ROS2/devel/: .catkin  local_setup.sh
ROS2/devel/lib/path_finder/: path_finder
ROS2/devel/lib/pkgconfig/: nav.pc  path_finder.pc
ROS2/devel/share/nav/cmake/: navConfig.cmake
ROS2/devel/share/path_finder/cmake/: path_finder-msg-extras.cmake  path_finder-msg-paths.cmake  path_finderConfig.cmake
ROS2/devel/share/roseus/ros/nav/: manifest.l
ROS2/devel/share/roseus/ros/path_finder/: manifest.l
ROS2/src/path_finder/: CMakeLists.txt
chatroom/: .package.swp  package.xml
chatroom/src/: chat_node.cpp
decision trees/: transform-checkpoint.ipynb
