<?xml version="1.0"?>
<package format="2">
  <name>chatroom</name>
  <version>0.0.1</version>
  <description>The chatroom package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>


  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
